<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tx_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/預約"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_booking" />

    <TextView
        android:id="@+id/tx_dotor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/dotor_id"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tx_name"
        app:layout_constraintTop_toBottomOf="@+id/tx_name" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tx_name"
        app:layout_constraintTop_toBottomOf="@+id/tx_name" tools:targetApi="o"/>

    <EditText
        android:id="@+id/ed_dotor_id"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tx_dotor_id"
        app:layout_constraintTop_toBottomOf="@+id/tx_dotor_id" />

    <Button
        android:id="@+id/bt_check"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:onClick="OnLogin"
        android:text="@string/check"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_dotor_id" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="368dp"
        android:layout_height="32dp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="475dp" />

</android.support.constraint.ConstraintLayout>